js/src/tests/test262/language/expressions/class/elements/syntax/early-errors/invalid-names/field-init-fn-member-expression-bad-reference.js
DONOTEVALUATE
(
)
;
var
C
=
class
{
f
=
function
(
)
{
something
.
#
x
}
}
;
